Clean up 2018