@@ -8,15 +8,15 @@ public class Parser extends aoc.utils.Parser<Config> {
     public Config parse(List<String> lines) {
         try {
             var re = Pattern.compile("(\\d+) players; last marble is worth (\\d+) points");
-            var matcher = re.matcher(lines.get(0));
+            var matcher = re.matcher(lines.getFirst());
 
             if (!matcher.matches()) {
-                throw new Exception("Invalid input: " + lines.get(0));
+                throw new Exception("Invalid input: " + lines.getFirst());
             }
 
             return new Config(Integer.parseInt(matcher.group(1)), Integer.parseInt(matcher.group(2)));
         } catch (Exception ex) {
-            ex.printStackTrace();
+            System.out.println(ex.getMessage());
             return null;
         }
     }
